--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,27 @@ h2{
   margin: 15px;
 }
 
+.signature{
+  background-color: #222;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  position:absolute;
+  top:0px;
+  box-shadow: 5px 5px 15px 5px #000000;
+  right:20px;
+  width: 150px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
 
+}
+.signature a{
+  font-family: Arial, Helvetica, sans-serif;
+  color: #ffffff;
+  text-decoration:  none;
+  font-size: 10px;
+}
 
 /** faire bouger un peu tout ça **/
 h1,
@@ -107,4 +127,23 @@ h2 {
   100%{
     transform: rotate(0deg) scale(1);
   }
+}
+
+/** taille des textes **/
+h1{
+  font-size: 18px;
+}
+h2{
+  font-size: 15px;
+}
+/** boutons **/
+.btn {
+font-size:14px;
+}
+/** l'image fait toujours la même largeur **/
+img{
+  margin: 10px;
+  padding: 5px;
+  width: 80%;
+  height: auto;
 }
